# cogni

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EXAMPLE_TEST_RESULTS.md  FIXES_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  LICENSE  MEMORYSTORE_HISTORY_API.md  Makefile  PRD.md  README.md  RELEASE_CHECKLIST.md  TODO.md  USAGE_GUIDE.md  coverage.info  maskfile.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit.yml
agent_conversations/: 1b534020-0708-4ff0-b16d-0f427af725bb.json  3b5baa46-5969-45fe-acf2-af8e87f94d82.json  4a97167b-aad5-49c6-a92c-01164cc9f624.json  5fbd09cf-ba26-4aa0-ad5e-f9cf18ac9ec5.json  b8711461-53f7-49e0-9c49-7bd6a16ea646.json
agents/selectors/: Cargo.toml  README.md
agents/selectors/examples/: selector_usage.rs
agents/selectors/src/: lib.rs
ai-docs/: model-context-protocol.md  ollama-api.md  openai-structured-outputs.html
benches/: client_bench.rs  context_bench.rs  provider_bench.rs  state_bench.rs
cogni/: Cargo.toml
cogni-client/: Cargo.toml
cogni-client/src/: builder.rs  client.rs  lib.rs  middleware.rs  parallel.rs  stateful.rs
cogni-context/: Cargo.toml
cogni-context/src/: counter.rs  error.rs  lib.rs  manager.rs  strategies.rs  types.rs
cogni-core/: Cargo.toml
cogni-core/src/: error.rs  lib.rs  provider.rs
cogni-core/src/types/: message.rs  mod.rs  request.rs  response.rs  stream.rs  structured.rs  tool.rs
cogni-derive/: Cargo.toml
cogni-derive/examples/: derive_demo.rs
cogni-derive/src/: lib.rs
cogni-derive/tests/: structured_output.rs
cogni-middleware/: Cargo.toml
cogni-middleware/src/: cache.rs  lib.rs  logging.rs  rate_limit.rs  retry.rs  state.rs
cogni-providers/: Cargo.toml
cogni-providers/src/: builder.rs  config_builder.rs  constants.rs  error.rs  http.rs  lib.rs  stream_utils.rs  traits.rs  utils.rs
cogni-providers/src/anthropic/: config.rs  converter.rs  mod.rs  parser.rs  provider.rs  stream.rs
cogni-providers/src/ollama/: config.rs  converter.rs  direct_stream_tests.rs  mod.rs  parser.rs  provider.rs  stream.rs  tests.rs
cogni-providers/src/openai/: config.rs  converter.rs  mod.rs  parser.rs  provider.rs  stream.rs
cogni-state/: Cargo.toml
cogni-state/src/: error.rs  lib.rs  store.rs  types.rs
cogni-state/src/store/: file.rs  memory.rs
cogni-tools/: Cargo.toml
cogni-tools/src/: error.rs  executor.rs  lib.rs  mcp.rs  registry.rs  validation.rs
cogni-tools/src/builtin/: mod.rs
cogni/src/: lib.rs
core/: Cargo.toml
core/src/: agent.rs  chain.rs  error.rs  lib.rs  llm.rs  memory.rs  prompt.rs  test_utils.rs  tool.rs
core/src/agent/: builder.rs  memory_bridge.rs  strategy.rs  tool_pipeline.rs
core/src/traits/: agent.rs  builder.rs  chain.rs  llm.rs  memory.rs  mod.rs  prompt.rs  tool.rs
core/tests/: agent_builder_test.rs
core/tests/integration/: agent_harness.rs  agent_lifecycle_test.rs  chain_test.rs  mod.rs  query_history_test.rs
docs/: TDD.md  integration_patterns.md  pre-commit-setup.md
examples/: agent_patterns.rs  agentic_combined_example.rs  basic_openai.rs  code_review_agent.rs  context_management_example.rs  custom_tools_example.rs  customer_support_agent.rs  data_analysis_agent.rs  middleware_example.rs  middleware_simple.rs  mock_server.py  multi_provider.rs  multi_provider_tools.rs  openai_chat.rs  provider_failover.rs  research_assistant_agent.rs  run_mcp_demo.sh  simple_client.rs  stateful_conversation.rs  streaming.rs  streaming_openai.rs  structured_output_derive.rs  structured_output_example.rs  structured_output_with_fallback.rs  test_tools_locally.rs  tool_execution_example.rs  tools_api_demo.rs
examples/client/: advanced_patterns_example.rs  combined_features_example.rs  multi_provider_client_example.rs  request_builder_example.rs  simple_chat_example.rs  streaming_example.rs
examples/openai-chat/: Cargo.toml
examples/openai-chat/src/: main.rs
examples/streaming/: Cargo.toml
examples/streaming/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: prompt.rs  prompt_macro.rs
macros/tests/prompt/: 01-basic.rs  02-multiple-placeholders.rs  03-empty-template.rs  03-empty-template.stderr  04-invalid-placeholder.rs  04-invalid-placeholder.stderr
memory/redis/: Cargo.toml
memory/redis/src/: lib.rs
memory/sqlite/: Cargo.toml  build.rs  sqlx-data.json  test.db
memory/sqlite/.sqlx/: query-29cea3b1025e7fcc843e6cbad66483c34dfb652db6ddad62ff0e141d6743bf45.json  query-3832def18230bf3c473e82f37187c5c5fef6efedf8815824ee0bf82846581f95.json
memory/sqlite/migrations/: 20240401000000_initial.sql
memory/sqlite/src/: lib.rs
providers/anthropic/: Cargo.toml
providers/anthropic/src/: lib.rs
providers/ollama/: Cargo.toml
providers/ollama/src/: lib.rs
providers/openai/: Cargo.toml
providers/openai/src/: lib.rs
scripts/: setup-pre-commit.sh
specs/: PRD.md  REWRITE.md  TDD.md
src/: lib.rs
tests/: agentic_features_test.rs  client_integration_test.rs  core_types.rs  structured_output_test.rs  tool_integration_test.rs  tool_streaming_test.rs
tools/code/: Cargo.toml
tools/code/src/: lib.rs
tools/common/: Cargo.toml
tools/common/src/: cache.rs  example.rs  http.rs  lib.rs  rate_limiter.rs
tools/math/: Cargo.toml
tools/math/src/: lib.rs
tools/mcp/: Cargo.toml  README.md  TDD.md
tools/mcp/examples/: mcp_client_example.rs  run_demo.sh  simple_client.rs
tools/mcp/src/: client.rs  error.rs  lib.rs  protocol.rs  routing.rs
tools/registry/: Cargo.toml
tools/registry/src/: lib.rs  validation.rs
tools/search/: Cargo.toml
tools/search/examples/: search_example.rs
tools/search/src/: lib.rs
