[package]
name = "cogni"
version = "0.1.0"
edition = "2021"
description = "A Rust framework for LLM orchestration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/cogni"

[workspace]
resolver = "3"

members = ["core", "macros", "tools", "memory", "providers"]

[workspace.package]
authors = ["Cogni Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jkhoffman/cogni"

[workspace.dependencies]
# Async runtime and streams
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
futures = { version = "0.3", features = ["std"] }
pin-project = "1.1"
bytes = "1.5"

# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
wiremock = "0.5"
tokio-test = "0.4"

# Time handling
time = { version = "0.3", features = ["serde"] }

# Proc macros
quote = "1.0"
proc-macro2 = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[features]
default = ["llm", "tool", "memory", "prompt", "chain"]
llm = []
tool = []
memory = []
prompt = []
chain = []
full = ["llm", "tool", "memory", "prompt", "chain"]
minimal = []

[dependencies]
cogni-core = { path = "core", version = "0.1.0" }
cogni-macros = { path = "macros", version = "0.1.0", optional = true }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
time = { version = "0.3", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.0"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
