[package]
name = "cogni"
version = "0.1.0"
edition = "2021"
description = "A Rust framework for LLM orchestration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jkhoffman/cogni"
authors = ["Cogni Team"]

[workspace]
resolver = "2"
members = ["core", "macros", "tools/*", "memory/*", "providers/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jkhoffman/cogni"
authors = ["Cogni Team"]

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async & Runtime
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
futures = { version = "0.3", features = ["std"] }
pin-project = "1.1"
bytes = "1.5"

# HTTP & Networking
reqwest = { version = "0.11", features = ["json", "stream"] }

# Templating & Text Processing
handlebars = "4.3"
regex = "1.9"

# Time
chrono = "0.4"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Logging & Diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
tokio-test = "0.4"
wiremock = "0.5"
pretty_assertions = "1.0"
test-log = { version = "0.2", features = ["trace"] }

# Proc Macro Support
quote = "1.0"
proc-macro2 = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[features]
default = ["llm", "tool", "memory", "prompt", "chain"]
llm = []
tool = []
memory = []
prompt = []
chain = []
full = ["llm", "tool", "memory", "prompt", "chain"]
minimal = []

[dependencies]
# Internal crates
cogni-core = { path = "core", version = "0.1.0", features = ["full"] }
cogni-macros = { path = "macros", version = "0.1.0", optional = true }

# External dependencies
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
time.workspace = true
log = "0.4.27"
env_logger = "0.11.8"

[dev-dependencies]
tokio-test.workspace = true
pretty_assertions.workspace = true
test-log.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow = "1"
futures = "0.3"
cogni-provider-openai = { path = "providers/openai" }
cogni-core = { path = "core" }
cogni-macros = { path = "macros" }
cogni-tool-mcp = { path = "tools/mcp" }
cogni-tool-search = { path = "tools/search" }
cogni-tools-common = { path = "tools/common" }
