[package]
name = "cogni-context"
version = "0.1.0"
edition = "2021"
authors = ["Cogni Contributors"]
description = "Context management and token counting for Cogni"
repository = "https://github.com/yourusername/cogni"
license = "MIT OR Apache-2.0"
keywords = ["llm", "context", "tokens", "ai"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
cogni-core = { path = "../cogni-core" }
tiktoken-rs = "0.5"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
