[package]
name = "cogni-context"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Context management and token counting for Cogni"
repository.workspace = true
license.workspace = true
keywords = ["llm", "context", "tokens", "ai"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
cogni-core = { path = "../cogni-core" }
tiktoken-rs = "0.5"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
