[package]
name = "cogni-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Derive macros for the Cogni LLM framework"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
cogni-core = { path = "../cogni-core" }
serde = { workspace = true }
serde_json = { workspace = true }
