[package]
name = "cogni-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cogni-providers"
description = "Provider implementations for the Cogni LLM library"

[dependencies]
cogni-core = { path = "../cogni-core" }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
