[package]
name = "cogni-state"
version = "0.1.0"
edition = "2021"
authors = ["Cogni Contributors"]
description = "State persistence for Cogni agents"
repository = "https://github.com/yourusername/cogni"
license = "MIT OR Apache-2.0"
keywords = ["llm", "ai", "state", "persistence", "agent"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
cogni-core = { path = "../cogni-core", version = "0.1.0" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync", "fs", "io-util"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"
futures = "0.3"
