[package]
name = "cogni-state"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "State persistence for Cogni agents"
repository.workspace = true
license.workspace = true
keywords = ["llm", "ai", "state", "persistence", "agent"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
cogni-core = { path = "../cogni-core" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync", "fs", "io-util"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"
futures = "0.3"
