[package]
name = "cogni-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cogni-tools"
description = "Tool execution framework for the Cogni LLM library"

[dependencies]
cogni-core = { path = "../cogni-core" }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
mcp = []
