[package]
name = "cogni-core"
version = "0.1.0"
edition = "2024"
description = "Core traits and types for the Cogni LLM orchestration framework"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }

# Time handling
time = { workspace = true, features = ["formatting"] }

# Template handling
handlebars = "5.1"
regex = "1.10"

# Date and time handling
chrono = "0.4"
anyhow = "1.0.98"

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
