[package]
name = "cogni-core"
version = "0.1.0"
edition = "2021"
description = "Core traits and types for the Cogni framework"
license = "MIT OR Apache-2.0"
authors.workspace = true
repository.workspace = true

[features]
default = ["llm", "tool", "memory", "prompt", "chain"]
llm = []
tool = []
memory = []
prompt = []
chain = []
full = ["llm", "tool", "memory", "prompt", "chain"]
minimal = []

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"

# Time handling
time = { version = "0.3", features = ["serde"] }

# Template handling
handlebars = "5.1"
regex = "1.10"

# Date and time handling
chrono = "0.4"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.0"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.5"
