[package]
name = "cogni-core"
version.workspace = true
edition.workspace = true
description = "Core traits and implementations for the Cogni framework"
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["llm", "tool", "memory", "prompt", "chain"]
llm = []
tool = []
memory = []
prompt = []
chain = []
full = ["llm", "tool", "memory", "prompt", "chain"]
minimal = []

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

# Async & Runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# HTTP & Networking
reqwest.workspace = true

# Templating & Text Processing
handlebars.workspace = true
regex.workspace = true

# Time
chrono = { workspace = true, features = ["serde"] }
time = { workspace = true, features = ["formatting", "parsing"] }

# Logging & Diagnostics
tracing.workspace = true

# Utilities
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
# Testing frameworks
tokio-test.workspace = true
wiremock.workspace = true
pretty_assertions.workspace = true

# Logging for tests
test-log.workspace = true
tracing-subscriber.workspace = true
