[package]
name = "cogni-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for the Cogni framework"
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
serde_json = "1.0"

[dev-dependencies]
trybuild = "1.0"
