[package]
name = "cogni-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for the Cogni framework"
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }
proc-macro-error = "1.0"
regex = "1.10"

[dev-dependencies]
cogni-core = { path = "../core" }
trybuild = "1.0"
