[package]
name = "cogni-memory-redis"
version = "0.1.0"
edition = "2024"
description = "Redis memory backend for the Cogni framework"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cogni-core = { path = "../../core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
