[package]
name = "cogni-memory-redis"
version = "0.1.0"
edition = "2024"
description = "Redis memory backend for the Cogni framework"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
cogni-core = { path = "../../core" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
redis = { version = "0.29.5", features = ["tokio-comp", "json"] }

# Logging
tracing = "0.1"

# Added chrono
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = { workspace = true }
