[package]
name = "cogni-memory-sqlite"
version = "0.1.0"
edition = "2024"
description = "SQLite memory backend for the Cogni framework"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cogni-core = { path = "../../core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }

# Logging
tracing = { workspace = true }
chrono = "0.4.40"

[dev-dependencies]
tokio-test = { workspace = true }
