[package]
name = "cogni-memory-sqlite"
version = "0.1.0"
edition = "2024"
description = "SQLite memory backend for the Cogni framework"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cogni-core = { path = "../../core" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }

# Explicitly declare dependencies instead of relying on workspace
tokio = { version = "1", features = [
    "full",
] } # Ensure full features for async runtime
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "time",
    "migrate",
] } # Explicit sqlx with features
time = { version = "0.3", features = [
    "formatting",
    "macros",
    "parsing",
] } # Explicit time with features
tracing = "0.1"

# Async runtime
# tokio = { workspace = true }
# async-trait = { workspace = true }

# Error handling
# thiserror = { workspace = true }

# Serialization
# serde = { workspace = true }
# serde_json = { workspace = true }

# Database
# sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-rustls"] }

# Time handling
# time = { version = "0.3", features = ["formatting", "macros", "parsing"] }

# Logging
# tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
