[package]
name = "cogni-tool-code"
version = "0.1.0"
edition = "2021"
description = "Code execution tool for the Cogni framework"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cogni-core = { path = "../../core" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
wasmtime = "31.0"

[dev-dependencies]
tokio-test = "0.4"
