[package]
name = "cogni-tools-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Common utilities for Cogni tools"

[dependencies]
# Internal crates
cogni-core = { path = "../../core", version = "0.1.0", features = ["tool"] }

# External dependencies
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { version = "0.11", features = [
    "json",
    "stream",
    "cookies",
    "gzip",
    "brotli",
] }
url = "2.4.1"
backoff = { version = "0.4.0", features = ["tokio"] }
cached = "0.44.0"
governor = "0.6.0"
dashmap = "5.5.3"
bytes = "1.5.0"
mime = "0.3.17"

[dev-dependencies]
tokio-test.workspace = true
pretty_assertions.workspace = true
test-log.workspace = true
tracing-subscriber.workspace = true
wiremock.workspace = true
