[package]
name = "cogni-tool-math"
version = "0.1.0"
edition = "2021"
description = "Math tool for the Cogni framework"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cogni-core = { path = "../../core" }
async-trait = "0.1"
nalgebra = "0.32"
num = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.16"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
approx = "0.5"
tokio-test = "0.4"
