[package]
name = "cogni-tool-search"
version = "0.1.0"
edition = "2021"
description = "Search tool for the Cogni framework"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cogni-core = { path = "../../core" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tantivy = "0.24"
rust-stemmers = "1.2"
reqwest = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = { workspace = true }
